# weread2notion-next

./: .gitignore  DATA_CONTRACT.md  README.md  action.yml  pyproject.toml
.github/workflows/: heatmap-data.yml  weread.yml
src/weread2notion_next/: cli.py  heatmap_export.py  models.py  notion_schema.py  renderers.py  state_store.py  sync_engine.py  weread_gateway.py
static/: heatmap.html
tests/: test_heatmap_export.py  test_notion_schema.py  test_renderers.py  test_sync_engine.py  test_weread_gateway.py
worker/: weread-heatmap.js  wrangler.toml.example
