[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weread2notion-next"
version = "0.1.0"
description = "Sync WeRead books, highlights, and notes to a Notion workspace with incremental updates."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "malinkang community"}]
dependencies = [
  "notion-client>=2.2.1",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "retrying>=1.3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
weread2notion-next = "weread2notion_next.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
